# no_gtk4rs_template

./: .gitignore  Cargo.toml  README.md  build.rs  make_new_project.py
data/: nop_name.gresource.xml  nopname.gresource.xml
data/ui/: main_window.ui  preferences.ui  shortcuts.ui
src/: main.rs
src/app/: imp.rs  mod.rs
src/main_window/: imp.rs  mod.rs
src/perferences/: config.rs  imp.rs  mod.rs
src/window/: imp.rs  mod.rs
