[package]
name = "nopname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita" }
gtk = { version = "0.9.4", package = "gtk4" }
interfaces = "0.0.9"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.19"}
homedir = "0.3.4"
rust-embed = "8.5.0"

[build-dependencies]
glib-build-tools = "0.20.0"
