[package]
name = "nopname"
version = "0.1.0"
edition = "2021"
authors = ["NObodyGX"]
description = "write your package description"
homepage = "https://github.com/nobodygx/nopname"
repository = "https://github.com/nobodygx/nopname"
keywords = ["gtk4"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
interfaces = "0.0.9"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.19"}
homedir = "0.3.4"
rust-embed = "8.5.0"

[build-dependencies]
glib-build-tools = "0.20.0"
